--- a/work.html
+++ b/work.html
@@ -191,6 +191,16 @@
                                 <button type="button" class="menu-toggle icon-btn"><i class="fas fa-bars"></i></button>
                             </div>
                         </div>
+                        <div class="col-auto d-none d-lg-block">
+                            <div class="header-button">
+                                <a href="contact.html" class="btn d-none d-xl-block">
+                                    GET A QUOTATION 
+                                </a>
+                                <button type="button" class="sidebar-btn sideMenuToggler">
+                                    Menu                                        
+                                </button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -200,82 +210,105 @@
     <!--==============================
     Breadcumb
     ============================== -->
-    <!-- <div class="breadcumb-wrapper" data-bg-src="assets/img/bg/breadcrumb-bg.png">  
+    <div class="breadcumb-wrapper" data-bg-src="assets/img/bg/breadcrumb-bg.png">
+        <!-- bg animated image/ -->   
         <div class="container">
             <div class="row justify-content-between align-items-center">
                 <div class="col-md-8">
                     <div class="breadcumb-content">
-                        <h1 class="breadcumb-title">Team Details</h1>
+                        <h1 class="breadcumb-title">Portfolio Showcase</h1>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <ul class="breadcumb-menu text-md-end">
                         <li><a href="index.html">Home</a></li>
-                        <li class="active">Team Details</li>
+                        <li class="active">Portfolio</li>
                     </ul>
                 </div>
             </div>
             
         </div>
-    </div> -->
+    </div>
 
     <!--==============================
-    Team Area  
+    Portfolio Area  
     ==============================-->
-    <div class="team-details-area space">
-        <div class="container">
-            <div class="single-team-details">
-                <div class="team-about-card" data-bg-src="assets/img/bg/team-details-bg.png">
-                    <div class="row g-lg-0">
-                        <div class="col-xl-5">
-                            <div class="team-about-card_img">
-                                <img class="w-100" src="assets/img/team/team-details.png" alt="team image">
-                            </div>
-                        </div>
-                        <div class="col-xl-7 align-self-center">
-                            <div class="team-about-card_box">
-                                <h2 class="team-about-card_title">Hillary Rgwaringesu</h2>
-                                <h6 class="team-about-card_desig">Founder - Creative Project Manager</h6>
-                                <p class="team-about-card_text"> LLB (UZ), PG(cert) Psych (UK), MA Creative Events Management (UK) , DMI</p>
-                                <div class="social-btn">
-                                    <a href="https://facebook.com/"><i class="fab fa-facebook-f"></i></a>
-                                    <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
-                                    <a href="https://linkedin.com/"><i class="fab fa-linkedin-in"></i></a>
-                                    <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
-                                </div>
-                                <div class="row gy-30">
-                                    <div class="col-md-6">
-                                        <div class="team-about-card_info">
-                                            <span class="icon"><i class="fas fa-user"></i></span>
-                                            <p><span>Experience </span> More Than 5 Years</p>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <div class="team-about-card_info">
-                                            <span class="icon"><i class="fas fa-phone-alt"></i></span>
-                                            <p><span>Phone </span> +(263) 774 594 617</p>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <div class="team-about-card_info">
-                                            <span class="icon"><i class="fas fa-envelope"></i></span>
-                                            <p><span>Email </span> info@penseconsulting.com</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+    <section class="portfolio-page-2">
+        <div class="container-fluid p-0">
+            <div class="row gy-4 masonary-active">
+                <div class="col-xl-6 filter-item">
+                    <div class="portfolio-thumb fade_left">
+                        <a class="popup-image icon-btn" href="assets/img/portfolio/portfolio6_1.png"><i class="far fa-eye"></i></a>
+                        <img src="assets/img/portfolio/portfolio6_1.png" alt="portfolio">
+                        <div class="portfolio-details">
+                            <p>Miranda & Malena</p>
+                            <h3><a href="project-details.html">Best Weeding Of The Year</a></h3>
                         </div>
                     </div>
                 </div>
-                <h3 class="page-subtitle">About Hillary Rgwaringesu</h3>
-                <p class="fw-light">Hillary is the Creative Project Manager at Pensé, bringing a wealth of expertise and a unique perspective to our team. With an LLBS from UZ and a PG (cert) in Psychology from University of Glasgow and pursuing a Masters in Creative Events Management from the University of Falmouth, Hillary’s diverse academic background complements his natural talent for events planning and marketing.</p>
-                <p class="fw-light">Before establishing Pensé, Hillary practiced corporate law and litigation for five years, where he honed his understanding for businesses, analytical skills and attention to detail. This legal foundation informs his creative approach, allowing him to navigate complex projects with precision, strategic insight and an inherent understanding of business dynamics.</p>
-                <p class="fw-light">While he was still in legal practice, Hillary’s innate ability in event management and marketing led to him to be headhunted by industry giants across various sectors, including business, pharmaceuticals, insurance, and private education for various events and event marketing projects that led to him gaining experience in the field, long before fully switching to the sector full-time.</p>
-                <p class="fw-light">Hillary’s experience is enhanced by his psychology qualification which equips him with a deep understanding of human behaviour and emotion an essential aspect of the events industry. This expertise allows him to create experiences that resonate with attendees, fostering meaningful connections and engagement.</p>
-                <p class="fw-light">As an accredited events planner and marketing strategist, Hillary combines his academic background with his passion for creativity. At Pensé, he leverages his multifaceted background to deliver innovative, bespoke solutions that not only meet client expectations but also set new industry standards.</p>
-            </div>            
+                <div class="col-xl-6 filter-item">
+                    <div class="portfolio-thumb fade_left">
+                        <a class="popup-image icon-btn" href="assets/img/portfolio/portfolio6_2.png"><i class="far fa-eye"></i></a>
+                        <img src="assets/img/portfolio/portfolio6_2.png" alt="portfolio">
+                        <div class="portfolio-details">
+                            <p>Miranda & Malena</p>
+                            <h3><a href="project-details.html">Best Weeding Of The Year</a></h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xxl-auto col-xl-6 filter-item">
+                    <div class="portfolio-thumb fade_left">
+                        <a class="popup-image icon-btn" href="assets/img/portfolio/portfolio6_3.png"><i class="far fa-eye"></i></a>
+                        <img src="assets/img/portfolio/portfolio6_3.png" alt="portfolio">
+                        <div class="portfolio-details">
+                            <p>Miranda & Malena</p>
+                            <h3><a href="project-details.html">Best Weeding Of The Year</a></h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xxl-auto col-xl-6 filter-item">
+                    <div class="portfolio-thumb fade_left">
+                        <a class="popup-image icon-btn" href="assets/img/portfolio/portfolio6_4.png"><i class="far fa-eye"></i></a>
+                        <img src="assets/img/portfolio/portfolio6_4.png" alt="portfolio">
+                        <div class="portfolio-details">
+                            <p>Miranda & Malena</p>
+                            <h3><a href="project-details.html">Best Weeding Of The Year</a></h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xxl-auto col-xl-6 filter-item">
+                    <div class="portfolio-thumb fade_left">
+                        <a class="popup-image icon-btn" href="assets/img/portfolio/portfolio6_5.png"><i class="far fa-eye"></i></a>
+                        <img src="assets/img/portfolio/portfolio6_5.png" alt="portfolio">
+                        <div class="portfolio-details">
+                            <p>Miranda & Malena</p>
+                            <h3><a href="project-details.html">Best Weeding Of The Year</a></h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-6 filter-item">
+                    <div class="portfolio-thumb fade_left">
+                        <a class="popup-image icon-btn" href="assets/img/portfolio/portfolio6_6.png"><i class="far fa-eye"></i></a>
+                        <img src="assets/img/portfolio/portfolio6_6.png" alt="portfolio">
+                        <div class="portfolio-details">
+                            <p>Miranda & Malena</p>
+                            <h3><a href="project-details.html">Best Weeding Of The Year</a></h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-6 filter-item">
+                    <div class="portfolio-thumb fade_left">
+                        <a class="popup-image icon-btn" href="assets/img/portfolio/portfolio6_7.png"><i class="far fa-eye"></i></a>
+                        <img src="assets/img/portfolio/portfolio6_7.png" alt="portfolio">
+                        <div class="portfolio-details">
+                            <p>Miranda & Malena</p>
+                            <h3><a href="project-details.html">Best Weeding Of The Year</a></h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
+    </section>   
 
     <!--==============================
         Footer Area
