--- a/work-details.html
+++ b/work-details.html
@@ -60,7 +60,7 @@
     ==============================-->
     <div class="preloader ">
         <div class="preloader-inner">
-            <img src="assets/img/logo-white.svg" alt="ovation">
+            <img src="assets/img/logo-white-144.png" alt="Pense">
             <span class="loader"></span>
         </div>
     </div>
@@ -71,7 +71,7 @@
             <div class="widget footer-widget">
                 <div class="widget-about">
                     <div class="footer-logo">
-                        <a href="index.html"><img src="assets/img/logo-white.svg" alt="Ovation"></a>
+                        <a href="index.html"><img src="assets/img/logo-white.png" alt="Pense"></a>
                     </div>
                     <p class="about-text">Lorem ipsum dolor sit amet consectetur adipiscing elit sociosqu integer, suscipit nascetur aliquet posuere aptent vehicula ligula pulvinar praesent.</p>
                     <div class="social-btn style2">
@@ -82,7 +82,7 @@
                     </div>
                 </div>
             </div>
-            <div class="widget widget_nav_menu footer-widget">
+            <!-- <div class="widget widget_nav_menu footer-widget">
                 <h3 class="widget_title">Quick Links</h3>
                 <ul class="menu">
                     <li><a href="about.html">About Us</a></li>
@@ -91,7 +91,7 @@
                     <li><a href="project.html">Our Projects</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
-            </div>
+            </div> -->
         </div>
     </div>
     <!--==============================
@@ -101,91 +101,24 @@
         <div class="mobile-menu-area text-center">
             <button class="menu-toggle"><i class="fas fa-times"></i></button>
             <div class="mobile-logo">
-                <a href="index.html"><img src="assets/img/logo-white.svg" alt="Ovation"></a>
+                <a href="index.html"><img src="assets/img/logo-white.png" alt="Pense"></a>
             </div>
             <div class="mobile-menu">
                 <ul>
-                    <li class="menu-item-has-children">
-                        <a href="#">Home</a>
-                        <ul class="sub-menu">
-                            <li class="menu-item-has-children">
-                                <a href="#">Multipage</a>
-                                <ul class="sub-menu">
-                                    <li>
-                                        <a href="index.html">Home 01 (Wedding)</a>
-                                    </li>
-                                    <li>
-                                        <a href="home-2.html">Home 02 (Event)</a>
-                                    </li>
-                                    <li>
-                                        <a href="home-3.html">Home 03 (Photography)</a>
-                                    </li>
-                                    <li>
-                                        <a href="home-4.html">Home 04 (Showcase)</a>
-                                    </li>
-                                    <li>
-                                        <a href="home-5.html">Home 05 (Slider Showcase)</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li class="menu-item-has-children">
-                                <a href="#">RTL</a>
-                                <ul class="sub-menu">
-                                    <li>
-                                        <a href="home-1-rtl.html">Home 01 (Wedding)</a>
-                                    </li>
-                                    <li>
-                                        <a href="home-2-rtl.html">Home 02 (Event)</a>
-                                    </li>
-                                    <li>
-                                        <a href="home-3-rtl.html">Home 03 (Photography)</a>
-                                    </li>
-                                    <li>
-                                        <a href="home-4-rtl.html">Home 04 (Showcase)</a>
-                                    </li>
-                                    <li>
-                                        <a href="home-5-rtl.html">Home 05 (Slider Showcase)</a>
-                                    </li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="menu-item-has-children">
-                        <a href="#">Pages</a>
-                        <ul class="sub-menu">
-                            <li><a href="about.html">About Page</a></li>
-                            <li><a href="team.html">Team Page</a></li>
-                            <li><a href="team-details.html">Team Details</a></li>
-                            <li><a href="faq.html">FAQ Page</a></li>
-                            <li><a href="reservation.html">Reservation Page</a></li>
-                            <li><a href="pricing.html">Pricing Page</a></li>
-                        </ul>
-                    </li>
-                    <li class="menu-item-has-children">
-                        <a href="#">Portfolio</a>
-                        <ul class="sub-menu">
-                            <li><a href="project.html">Case Studies Page</a></li>
-                            <li><a href="project-2.html">Portfolio Showcase Page</a></li>
-                            <li><a href="project-details.html">Portfolio Details</a></li>
-                        </ul>
-                    </li>
-                    <li class="menu-item-has-children">
-                        <a href="#">Blog</a>
-                        <ul class="sub-menu">
-                            <li><a href="blog.html">Blog</a></li>
-                            <li><a href="blog-details.html">Blog Details</a></li>
-                        </ul>
-                    </li>
-                    <li class="menu-item-has-children">
-                        <a href="#">Shop</a>
-                        <ul class="sub-menu">
-                            <li><a href="shop.html">Shop Grid</a></li>
-                            <li><a href="shop-2.html">Shop grid with sidebar</a></li>
-                            <li><a href="shop-details.html">Shop Details</a></li>
-                        </ul>
+                    <li >
+                        <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contact</a>
+                        <a href="about.html">About Us</a>
+                    </li>
+                    <li>
+                        <a href="services.html">Our Services</a>
+                    </li>
+                    <li>
+                        <a href="work.html">Our Work</a>
+                    </li>
+                    <li>
+                        <a href="contact.html">Contact Us</a>
                     </li>
                 </ul>
             </div>
@@ -201,28 +134,21 @@
                     <div class="col-auto d-none d-lg-block">
                         <div class="header-links">
                             <ul>
-                                <li><i class="far fa-clock"></i>Working: 8.00am - 5.00pm</li>
-                                <li><i class="far fa-envelope"></i><a href="mailto:info@gmail.com">wedding@ovation.com</a></li>
+                                <li><i class="far fa-clock"></i>Office Hours: 8.00am - 5.00pm</li>
+                                <li><i class="far fa-envelope"></i><a href="info@penseconsulting.com">info@penseconsulting.com</a></li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-auto">
                         <div class="header-links">
                             <ul>
-                                <li class="d-none d-sm-block">
-                                    <ul class="header-sub-links">
-                                        <li><a href="contact.html">Help</a></li>
-                                        <li><a href="contact.html">Support</a></li>
-                                        <li><a href="contact.html">Contact</a></li>
-                                    </ul>
-                                </li>
                                 <li>
                                     <div class="social-links">
                                         <span class="me-2">Visit Us:</span>
-                                        <a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
-                                        <a href="https://www.twitter.com/"><i class="fab fa-twitter"></i></a>
-                                        <a href="https://www.linkedin.com/"><i class="fab fa-linkedin-in"></i></a>
-                                        <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+                                        <a href="https://www.facebook.com/profile.php?id=61564981775895" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                                        <a href="https://x.com/penseconsulting" target="_blank"><i class="fab fa-twitter"></i></a>
+                                        <a href="https://www.linkedin.com/company/pensé-consulting" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                                        <a href="https://www.instagram.com/pense_zw" target="_blank"><i class="fab fa-instagram"></i></a>
                                     </div>
                                 </li>
                             </ul>
@@ -238,90 +164,23 @@
                     <div class="row align-items-center justify-content-between">
                         <div class="col-auto">
                             <div class="header-logo">
-                                <a href="index.html"><img src="assets/img/logo.svg" alt="logo"></a>
+                                <a href="index.html"><img src="assets/img/logo.png" alt="logo"></a>
                             </div>
                         </div>
                         <div class="col-auto">
                             <nav class="main-menu d-none d-lg-inline-block">
                                 <ul>
-                                    <li class="menu-item-has-children">
-                                        <a href="#">Home</a>
-                                        <ul class="sub-menu">
-                                            <li class="menu-item-has-children">
-                                                <a href="#">Multipage</a>
-                                                <ul class="sub-menu">
-                                                    <li>
-                                                        <a href="index.html">Home 01 (Wedding)</a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="home-2.html">Home 02 (Event)</a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="home-3.html">Home 03 (Photography)</a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="home-4.html">Home 04 (Showcase)</a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="home-5.html">Home 05 (Slider Showcase)</a>
-                                                    </li>
-                                                </ul>
-                                            </li>
-                                            <li class="menu-item-has-children">
-                                                <a href="#">RTL</a>
-                                                <ul class="sub-menu">
-                                                    <li>
-                                                        <a href="home-1-rtl.html">Home 01 (Wedding)</a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="home-2-rtl.html">Home 02 (Event)</a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="home-3-rtl.html">Home 03 (Photography)</a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="home-4-rtl.html">Home 04 (Showcase)</a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="home-5-rtl.html">Home 05 (Slider Showcase)</a>
-                                                    </li>
-                                                </ul>
-                                            </li>
-                                        </ul>
+                                    <li>
+                                        <a href="index.html">Home</a>
                                     </li>
-                                    <li class="menu-item-has-children">
-                                        <a href="#">Pages</a>
-                                        <ul class="sub-menu">
-                                            <li><a href="about.html">About Page</a></li>
-                                            <li><a href="team.html">Team Page</a></li>
-                                            <li><a href="team-details.html">Team Details</a></li>
-                                            <li><a href="faq.html">FAQ Page</a></li>
-                                            <li><a href="reservation.html">Reservation Page</a></li>
-                                            <li><a href="pricing.html">Pricing Page</a></li>
-                                        </ul>
+                                    <li>
+                                        <a href="about.html">About Us</a>
                                     </li>
-                                    <li class="menu-item-has-children">
-                                        <a href="#">Portfolio</a>
-                                        <ul class="sub-menu">
-                                            <li><a href="project.html">Case Studies Page</a></li>
-                                            <li><a href="project-2.html">Portfolio Showcase Page</a></li>
-                                            <li><a href="project-details.html">Portfolio Details</a></li>
-                                        </ul>
+                                    <li>
+                                        <a href="services.html">Our Services</a>
                                     </li>
-                                    <li class="menu-item-has-children">
-                                        <a href="#">Blog</a>
-                                        <ul class="sub-menu">
-                                            <li><a href="blog.html">Blog</a></li>
-                                            <li><a href="blog-details.html">Blog Details</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="menu-item-has-children">
-                                        <a href="#">Shop</a>
-                                        <ul class="sub-menu">
-                                            <li><a href="shop.html">Shop Grid</a></li>
-                                            <li><a href="shop-2.html">Shop grid with sidebar</a></li>
-                                            <li><a href="shop-details.html">Shop Details</a></li>
-                                        </ul>
+                                    <li>
+                                        <a href="work.html">Our Work</a>
                                     </li>
                                     <li>
                                         <a href="contact.html">Contact</a>
