--- a/services2.html
+++ b/services2.html
@@ -191,81 +191,112 @@
                                 <button type="button" class="menu-toggle icon-btn"><i class="fas fa-bars"></i></button>
                             </div>
                         </div>
+                       
                     </div>
                 </div>
             </div>
         </div>
     </header>
+    
 
     <!--==============================
     Portfolio Area  
     ==============================-->
-    <section class="portfolio-details-page space">
+    <section class="portfolio-page space">
         <div class="container">
             <div class="row">
-                <div class="col-xl-12">
-                    <div class="portfolio-img fade_left img-anim">
-                        <img class="w-100" src="assets/img/portfolio/portfolio-details_1.png" alt="portfolio">
+                <div class="col-lg-12">
+                    <div class="project-tab tab-menu1 filter-menu-active">
+                        <button data-filter="*" class="filter-btn active">
+                            Show All
+                        </button>
+                        <button data-filter=".cat1" class="filter-btn">
+                            Announcement
+                        </button>
+                        <button data-filter=".cat2" class="filter-btn">
+                            Planner
+                        </button>
+                        <button data-filter=".cat3" class="filter-btn">
+                            Story
+                        </button>
+                        <button data-filter=".cat4" class="filter-btn">
+                            Wedding
+                        </button>
                     </div>
                 </div>
-                <div class="col-xl-8">
-                    <div class="portfolio-details-wrap mt-40 title-anim">
-                        <h3 class="fw-normal mb-20">Biggest Marketing Strategy Development</h3>
-                        <p class="fw-light">Holisticly benchmark functional products fore excellent methods of emporment. Seamlessly visualize innovative readiness whereas extensive initiatives. Completely unleash frictionless data via end to end services. Continually unleash virtual e tailers through magnetic core compncies. Interactively engage distributed alments via focused alignments. Dynamically fabricate excellent innovation for go forward technology. Intrinsicly impact empowered scenarios.</p>
-                        <h3 class="fw-normal mt-40 mb-20">The Challenge Of Project</h3>
-                        <p class="fw-light mb-30">Interactively engage distributed alignments via focused alignments. Dynamically fabricate excellent  go forward technology. Intrinsicly impact empowered scenarios after cost effective outsourcing. Synenvtically productivate pandemic e-business rather than state of the art e-tailers. Completely unleash frictionless data via  services. Continually unleash virtual e tailers through magnetic core competencies.</p>
-                        <div class="row gy-4">
-                            <div class="col-md-6">
-                                <div class="portfolio-img fade_left">
-                                    <img class="w-100" src="assets/img/portfolio/portfolio-details_2.png" alt="portfolio">
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="portfolio-img fade_left">
-                                    <img class="w-100" src="assets/img/portfolio/portfolio-details_3.png" alt="portfolio">
-                                </div>
-                            </div>
+            </div>
+            <div class="row gy-4 filter-active mb-60">
+                <div class="col-md-6 col-lg-4 filter-item cat4">
+                    <div class="project-box title-anim">
+                        <div class="project-img global-img">
+                            <img src="assets/img/portfolio/portfolio7_1.png" alt="portfolio">
                         </div>
-                        <p class="mt-40 mb-n1">Completely unleash frictionless data via end to end services. Continually unleash virtual e tailers through magnetic core competencies. Interactively engage distributed alignments via focused alignments. excellent innovation for go forward technology. Intrinsicly impact empowered scenarios...</p>
+                        <div class="project-card-details">
+                            <p class="subtitle">Miranda & Malena</p>
+                            <h3 class="title"><a href="project-details.html">Best Weeding Of The Year</a></h3>
+                        </div>
                     </div>
                 </div>
-                <div class="col-xl-4 sidebar-widget-area mt-50">
-                    <aside class="sidebar-sticky-area sidebar-area title-anim">
-                        <div class="widget widget-project-details">
-                            <h3 class="widget_title">Project Information</h3>
-                            <ul>
-                                <li>
-                                    <div class="icon"><i class="fas fa-user"></i></div>
-                                    <div class="media-body">
-                                        <span class="title">Clients:</span>
-                                        <h6>Josefin H. Smith</h6>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="icon"><i class="fas fa-layer-group"></i></div>
-                                    <div class="media-body">
-                                        <span class="title">Category:</span>
-                                        <h6>Square Wedding, Ceremony</h6>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="icon"><i class="fas fa-calendar-alt"></i></div>
-                                    <div class="media-body">
-                                        <span class="title">Date:</span>
-                                        <h6>25 March, 2023</h6>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="icon"><i class="fas fa-map-marker-alt"></i></div>
-                                    <div class="media-body">
-                                        <span class="title">Address:</span>
-                                        <h6>258 Dancing Street, USA</h6>
-                                    </div>
-                                </li>
-                            </ul>
+                <div class="col-md-6 col-lg-4 filter-item cat4 cat2 cat3">
+                    <div class="project-box title-anim">
+                        <div class="project-img global-img">
+                            <img src="assets/img/portfolio/portfolio7_2.png" alt="portfolio">
                         </div>
-                    </aside>
+                        <div class="project-card-details">
+                            <p class="subtitle">Miranda & Malena</p>
+                            <h3 class="title"><a href="project-details.html">Best Weeding Of The Year</a></h3>
+                        </div>
+                    </div>
                 </div>
+                <div class="col-md-6 col-lg-4 filter-item cat1 cat3">
+                    <div class="project-box title-anim">
+                        <div class="project-img global-img">
+                            <img src="assets/img/portfolio/portfolio7_3.png" alt="portfolio">
+                        </div>
+                        <div class="project-card-details">
+                            <p class="subtitle">Miranda & Malena</p>
+                            <h3 class="title"><a href="project-details.html">Best Weeding Of The Year</a></h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4 filter-item cat1 cat2 cat4">
+                    <div class="project-box title-anim">
+                        <div class="project-img global-img">
+                            <img src="assets/img/portfolio/portfolio7_4.png" alt="portfolio">
+                        </div>
+                        <div class="project-card-details">
+                            <p class="subtitle">Miranda & Malena</p>
+                            <h3 class="title"><a href="project-details.html">Best Weeding Of The Year</a></h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4 filter-item cat3">
+                    <div class="project-box title-anim">
+                        <div class="project-img global-img">
+                            <img src="assets/img/portfolio/portfolio7_5.png" alt="portfolio">
+                        </div>
+                        <div class="project-card-details">
+                            <p class="subtitle">Miranda & Malena</p>
+                            <h3 class="title"><a href="project-details.html">Best Weeding Of The Year</a></h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4 filter-item cat1 cat2">
+                    <div class="project-box title-anim">
+                        <div class="project-img global-img">
+                            <img src="assets/img/portfolio/portfolio7_6.png" alt="portfolio">
+                        </div>
+                        <div class="project-card-details">
+                            <p class="subtitle">Miranda & Malena</p>
+                            <h3 class="title"><a href="project-details.html">Best Weeding Of The Year</a></h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="btn-wrap justify-content-center">
+                <a href="project-2.html" class="btn">
+                    LOAD MORE IMAGES 
+                </a>
             </div>
         </div>
     </section>   
