--- a/project-details.html
+++ b/project-details.html
@@ -357,13 +357,13 @@
             <div class="row justify-content-between align-items-center">
                 <div class="col-md-8">
                     <div class="breadcumb-content">
-                        <h1 class="breadcumb-title">Our Team</h1>
+                        <h1 class="breadcumb-title">Portfolio Details</h1>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <ul class="breadcumb-menu text-md-end">
                         <li><a href="index.html">Home</a></li>
-                        <li class="active">Our Team</li>
+                        <li class="active">Portfolio Details</li>
                     </ul>
                 </div>
             </div>
@@ -372,80 +372,77 @@
     </div>
 
     <!--==============================
-    Team Area  
+    Portfolio Area  
     ==============================-->
-    <div class="team-area-1 space overflow-hidden">          
+    <section class="portfolio-details-page space">
         <div class="container">
-            <div class="row gy-4 justify-content-lg-between justify-content-center">
-                <div class="col-lg-4 col-md-6">
-                    <div class="team-card title-anim">
-                        <div class="team-card_img global-img">
-                            <img src="assets/img/team/team-1-1.png" alt="Team Image">
-                        </div>
-                        <div class="team-card_content">
-                            <h3 class="team-card_title"><a href="team-details.html">Louisa Abadie</a></h3>
-                            <span class="team-card_desig">Manager</span>
-                        </div>
+            <div class="row">
+                <div class="col-xl-12">
+                    <div class="portfolio-img fade_left img-anim">
+                        <img class="w-100" src="assets/img/portfolio/portfolio-details_1.png" alt="portfolio">
                     </div>
-                </div>    
-                <div class="col-lg-4 col-md-6">
-                    <div class="team-card title-anim">
-                        <div class="team-card_img global-img">
-                            <img src="assets/img/team/team-1-2.png" alt="Team Image">
+                </div>
+                <div class="col-xl-8">
+                    <div class="portfolio-details-wrap mt-40 title-anim">
+                        <h3 class="fw-normal mb-20">Biggest Marketing Strategy Development</h3>
+                        <p class="fw-light">Holisticly benchmark functional products fore excellent methods of emporment. Seamlessly visualize innovative readiness whereas extensive initiatives. Completely unleash frictionless data via end to end services. Continually unleash virtual e tailers through magnetic core compncies. Interactively engage distributed alments via focused alignments. Dynamically fabricate excellent innovation for go forward technology. Intrinsicly impact empowered scenarios.</p>
+                        <h3 class="fw-normal mt-40 mb-20">The Challenge Of Project</h3>
+                        <p class="fw-light mb-30">Interactively engage distributed alignments via focused alignments. Dynamically fabricate excellent  go forward technology. Intrinsicly impact empowered scenarios after cost effective outsourcing. Synenvtically productivate pandemic e-business rather than state of the art e-tailers. Completely unleash frictionless data via  services. Continually unleash virtual e tailers through magnetic core competencies.</p>
+                        <div class="row gy-4">
+                            <div class="col-md-6">
+                                <div class="portfolio-img fade_left">
+                                    <img class="w-100" src="assets/img/portfolio/portfolio-details_2.png" alt="portfolio">
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="portfolio-img fade_left">
+                                    <img class="w-100" src="assets/img/portfolio/portfolio-details_3.png" alt="portfolio">
+                                </div>
+                            </div>
                         </div>
-                        <div class="team-card_content">
-                            <h3 class="team-card_title"><a href="team-details.html">Mike Johnson</a></h3>
-                            <span class="team-card_desig">Manager</span>
-                        </div>
+                        <p class="mt-40 mb-n1">Completely unleash frictionless data via end to end services. Continually unleash virtual e tailers through magnetic core competencies. Interactively engage distributed alignments via focused alignments. excellent innovation for go forward technology. Intrinsicly impact empowered scenarios...</p>
                     </div>
-                </div>  
-                <div class="col-lg-4 col-md-6">
-                    <div class="team-card title-anim">
-                        <div class="team-card_img global-img">
-                            <img src="assets/img/team/team-1-3.png" alt="Team Image">
+                </div>
+                <div class="col-xl-4 sidebar-widget-area mt-50">
+                    <aside class="sidebar-sticky-area sidebar-area title-anim">
+                        <div class="widget widget-project-details">
+                            <h3 class="widget_title">Project Information</h3>
+                            <ul>
+                                <li>
+                                    <div class="icon"><i class="fas fa-user"></i></div>
+                                    <div class="media-body">
+                                        <span class="title">Clients:</span>
+                                        <h6>Josefin H. Smith</h6>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="icon"><i class="fas fa-layer-group"></i></div>
+                                    <div class="media-body">
+                                        <span class="title">Category:</span>
+                                        <h6>Square Wedding, Ceremony</h6>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="icon"><i class="fas fa-calendar-alt"></i></div>
+                                    <div class="media-body">
+                                        <span class="title">Date:</span>
+                                        <h6>25 March, 2023</h6>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="icon"><i class="fas fa-map-marker-alt"></i></div>
+                                    <div class="media-body">
+                                        <span class="title">Address:</span>
+                                        <h6>258 Dancing Street, USA</h6>
+                                    </div>
+                                </li>
+                            </ul>
                         </div>
-                        <div class="team-card_content">
-                            <h3 class="team-card_title"><a href="team-details.html">Amelia Harper</a></h3>
-                            <span class="team-card_desig">Manager</span>
-                        </div>
-                    </div>
-                </div>  
-                <div class="col-lg-4 col-md-6">
-                    <div class="team-card title-anim">
-                        <div class="team-card_img global-img">
-                            <img src="assets/img/team/team-1-4.png" alt="Team Image">
-                        </div>
-                        <div class="team-card_content">
-                            <h3 class="team-card_title"><a href="team-details.html">Matthew Taylor</a></h3>
-                            <span class="team-card_desig">Manager</span>
-                        </div>
-                    </div>
-                </div>   
-                <div class="col-lg-4 col-md-6">
-                    <div class="team-card title-anim">
-                        <div class="team-card_img global-img">
-                            <img src="assets/img/team/team-1-5.png" alt="Team Image">
-                        </div>
-                        <div class="team-card_content">
-                            <h3 class="team-card_title"><a href="team-details.html">Sophia Williams</a></h3>
-                            <span class="team-card_desig">Manager</span>
-                        </div>
-                    </div>
-                </div>  
-                <div class="col-lg-4 col-md-6">
-                    <div class="team-card title-anim">
-                        <div class="team-card_img global-img">
-                            <img src="assets/img/team/team-1-6.png" alt="Team Image">
-                        </div>
-                        <div class="team-card_content">
-                            <h3 class="team-card_title"><a href="team-details.html">Nicholas White</a></h3>
-                            <span class="team-card_desig">Manager</span>
-                        </div>
-                    </div>
-                </div>               
+                    </aside>
+                </div>
             </div>
         </div>
-    </div>
+    </section>   
 
     <!--==============================
         Footer Area
