--- a/contact.html
+++ b/contact.html
@@ -226,8 +226,7 @@
                         <div class="contact-details">
                             <h4 class="title">Email Address</h4>
                             <span>24/7 Anytime</span>
-                            <p>info@ovation-wedding.com</p>
-                            <p>live-event@ovation.com</p>
+                            <p>info@penseconsulting.com</p>
                         </div>
                     </div>
                 </div>
@@ -239,8 +238,7 @@
                         <div class="contact-details">
                             <h4 class="title">Phone Number</h4>
                             <span>24/7 Anytime</span>
-                            <p>+(258) 159 21 21536,</p>
-                            <p>+(856) 215 21 5692</p>
+                            <p>+(263) 774 594 617</p>
                         </div>
                     </div>
                 </div>
