--- a/work-details.html
+++ b/work-details.html
@@ -210,7 +210,7 @@
                 </div>
                 <div class="col-xl-8">
                     <div class="portfolio-details-wrap mt-40 title-anim">
-                        <h3 class="fw-normal mb-20">Biggest Marketing Strategy Development</h3>
+                        <h3 class="fw-normal mb-20">Booties Pharmacy</h3>
                         <p class="fw-light">Holisticly benchmark functional products fore excellent methods of emporment. Seamlessly visualize innovative readiness whereas extensive initiatives. Completely unleash frictionless data via end to end services. Continually unleash virtual e tailers through magnetic core compncies. Interactively engage distributed alments via focused alignments. Dynamically fabricate excellent innovation for go forward technology. Intrinsicly impact empowered scenarios.</p>
                         <h3 class="fw-normal mt-40 mb-20">The Challenge Of Project</h3>
                         <p class="fw-light mb-30">Interactively engage distributed alignments via focused alignments. Dynamically fabricate excellent  go forward technology. Intrinsicly impact empowered scenarios after cost effective outsourcing. Synenvtically productivate pandemic e-business rather than state of the art e-tailers. Completely unleash frictionless data via  services. Continually unleash virtual e tailers through magnetic core competencies.</p>
